# clion-opencv-app

./: CMakeLists.txt  main.cpp
